Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-30218

Incorrect optimization for rowid_filtering

    XMLWordPrintable

Details

    Description

      This comes from Monty who got a complaint from a user

      After MDEV-28846, rowid filtering optimization is applied in the cases where it should not be.

      Also, reading the optimizer code, one can see obvious cost computation errors.

      Attachments

        Issue Links

          Activity

            People

              psergei Sergei Petrunia
              psergei Sergei Petrunia
              Votes:
              1 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 10d 0.5h
                  10d 0.5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.